# TouchAR_ROS

./: .gitmodules  README.md  documentation.txt
.cache/clangd/index/: JointTorqueComparison.h.00799C615CE51B61.idx  cartesian_impedance_example_controller.cpp.9714C10E45F7432C.idx  cartesian_impedance_example_controller.h.C881F9CC82AD7816.idx  cartesian_pose_example_controller.cpp.58175B0E1EE45A0F.idx  cartesian_pose_example_controller.h.0392F48011453E73.idx  cartesian_velocity_example_controller.cpp.F14A19F68F834D16.idx  cartesian_velocity_example_controller.h.99811AF91514665C.idx  compliance_paramConfig.h.AD5F500932395EB0.idx  desired_mass_paramConfig.h.2FFB3BE1A175E21F.idx  dual_arm_cartesian_impedance_example_controller.cpp.2AAA3B535ED20F5E.idx  dual_arm_cartesian_impedance_example_controller.h.9293120735E71EFB.idx  dual_arm_compliance_paramConfig.h.ED0F44134841DCCC.idx  elbow_example_controller.cpp.B2E9A226945B5ED1.idx  elbow_example_controller.h.853781240C2F95CF.idx  force_example_controller.cpp.44736371D83558AE.idx  force_example_controller.h.1A19CF2FABA9E4A0.idx  franka_cartesian_command_interface.h.3707A5ADF527FD47.idx  franka_model_interface.h.909364B2DE923EDD.idx  franka_state_interface.h.99D82F3CBC6B7D61.idx  joint_impedance_example_controller.cpp.B08A7A8C415C8705.idx  joint_impedance_example_controller.h.8339C9D7151C9C27.idx  joint_position_example_controller.cpp.E70B5912127C995B.idx  joint_position_example_controller.h.166A2D7FBA10F4D9.idx  joint_velocity_example_controller.cpp.476EC412F83BE03B.idx  joint_velocity_example_controller.h.B0967CECD42B6F99.idx  joint_wall.cpp.B430E0DE1D16F83D.idx  joint_wall.h.915B1C88FF595673.idx  model.h.C89DDA0D584458DE.idx  model_base.h.B372775EB51E0E86.idx  model_example_controller.cpp.01B9831E7EA62656.idx  model_example_controller.h.44E394F9293C4005.idx  pseudo_inversion.h.66571F22A911EDEC.idx  teleop_joint_pd_example_controller.cpp.562ABA4F9B1D08CD.idx  teleop_joint_pd_example_controller.h.FDC836D3CCFE9440.idx  teleop_paramConfig.h.86748A1C58556064.idx  trigger_rate.h.7A2FBD08F18CB09C.idx
src/comms_router/: CMakeLists.txt  package.xml
src/comms_router/scripts/: .pinch_gripper.py.swo  .pinch_gripper.py.swp  (+1 more)
src/touch_ar/: CMakeLists.txt  franka_example_controllers_plugin.xml  package.xml
src/touch_ar/launch/: _cartesian_impedance_sim_interactive.launch  _cartesian_pose_sim.launch  _controller_groups.launch  _gazebo_no_controller.launch  _robot_no_control.launch  touch_ar_gazebo.launch  touch_ar_panda.launch
src/touch_ar/src/: force_example_controller.cpp
src/touch_ar_msgs/: CMakeLists.txt  package.xml
