<?xml version="1.0"?>
<package format="2">
  <name>touch_ar_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for the TouchAR project</description>

  <maintainer email="l.marx@utwente.nl">Lennard Marx</maintainer>


  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
